tests/vrml97/good/unimplemented-externproto.wrl
#VRML V2.0 utf8
EXTERNPROTO UnimplementedNode [ exposedField SFBool sfboolField ] []
UnimplementedNode { sfboolField TRUE }
