tests/vrml97/bad/unrecognized-field.wrl
#VRML V2.0 utf8
EXTERNPROTO Node [ field SFBool val ] []
Node { wrong TRUE }
